--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "environment_variables": {
+    "NODE_ENV": "production"
+  },
+  "deploy": {
+    "Shipworks IO Wrapper": {
+      "environment_variables": {
+        "NODE_ENV": "production",
+        "PORT": "80"
+      }
+    }
   }
+
 }
